src/test/ui/typeof/issue-100183.rs
struct Struct {
    y: (typeof("hey"),),
    //~^ ERROR `typeof` is a reserved keyword but unimplemented
}

fn main() {}
